tests/paczka1/fuzzy1/36277385.err
Error in line 2: rO0g3qzr A701 70,4
Error in line 8: D8mIE9Bv S797 14,2
Error in line 18: FsPmONDcDwJ S944 47,9
Error in line 33: 8yH72Lhls6v S797 87,7
Error in line 36: qV6 944 20,6
